force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <label>Branch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>