force-app/main/default/objects/Branch__c/fields/branch_count__c.field-meta.xml
<CustomField>
    <fullName>branch_count__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch</relationshipName>
    <type>Lookup</type>
</CustomField>