force-app/main/default/objects/Branch__c/fields/BranchId__c.field-meta.xml
<CustomField>
    <fullName>BranchId__c</fullName>
    <displayFormat>BR-{0000}</displayFormat>
    <label>BranchId</label>
    <type>AutoNumber</type>
</CustomField>