force-app/main/default/objects/Branch__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>