force-app/main/default/objects/Branch__c/fields/Running_Duration__c.field-meta.xml
<CustomField>
    <fullName>Running_Duration__c</fullName>
    <label>Running Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>