force-app/main/default/objects/Branch__c/fields/Tot_Staff__c.field-meta.xml
<CustomField>
    <fullName>Tot_Staff__c</fullName>
    <label>Tot.Staff</label>
    <summaryForeignKey>Stafff__c.Count_staff__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>