force-app/main/default/objects/Branch__c/recordTypes/North_India.recordType-meta.xml
<RecordType>
    <fullName>North_India</fullName>
    <active>true</active>
    <label>North_India</label>
</RecordType>