force-app/main/default/objects/Branch__c/recordTypes/South_india.recordType-meta.xml
<RecordType>
    <fullName>South_india</fullName>
    <active>true</active>
    <label>South_india</label>
</RecordType>